--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-tools"></i> Bioinformatics Tools Database</h1>
+            <h1><i class="fas fa-tools"></i> SCP Tool Database</h1>
             <p class="subtitle">Explore and search through <span id="total-tools">650+</span> bioinformatics tools and services</p>
         </header>
 
