--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bioinformatics Tools Database</title>
+    <title>SCP Tool Database</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-dna"></i> Bioinformatics Tools Database</h1>
+            <h1><i class="fas fa-dna"></i> SCP Tool Database</h1>
             <p class="subtitle">Explore computational tools, databases, and model services for bioinformatics research</p>
         </header>
 
