--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1><i class="fas fa-dna"></i> SCP Tool Database</h1>
-            <p class="subtitle">Explore computational tools, databases, and model services for bioinformatics research</p>
+            <p class="subtitle">Explore SCP tools, databases, and model services for scientific discovery</p>
         </header>
 
         <div class="controls">
