Update footer text and GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         </div>
 
         <footer>
-            <p>Bioinformatics Tools Database • Last updated: December 2024 • Total tools: <span id="footerCount">653</span></p>
+            <p>SCP Tool Database • Last updated: December 2025 • Total tools: <span id="footerCount">653</span></p>
             <p class="github-link">
-                <a href="https://github.com/yourusername/your-repo" target="_blank">
+                <a href="https://github.com/Yankai96/SCP_Tool_List" target="_blank">
                     <i class="fab fa-github"></i> View on GitHub
                 </a>
             </p>
